[package]
name = "expense_tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.10"
log = "0.4"
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.16", features = ["derive"] }
actix-rt = "2"
sqlx = { version = "0.6", features = ["sqlite", "uuid", "chrono", "runtime-actix-native-tls"] }
uuid = { version = "1.2", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
